--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,14 +26,14 @@
                 android:value=".ui.MainActivity" />
         </activity>
         <activity
-            android:name=".ui.SearchResultActvity"
+            android:name=".ui.SearchActivity"
             android:label="@string/search_result">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-            <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
+            <!--<meta-data-->
+            <!--android:name="android.app.searchable"-->
+            <!--android:resource="@xml/searchable" />-->
         </activity>
     </application>
 
