--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </activity>
         <activity
             android:name=".ui.SearchActivity"
-            android:label="@string/search_result"
+            android:label="@string/search"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
