--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:support-v4:22.0.0'
     compile 'com.android.support:recyclerview-v7:22.0.0'
-    compile files('libs/ksoap2-android-assembly-3.0dependencies.jar')
+    compile files('libs/ksoap2-android-assembly-3.4.0-jar-with-dependencies.jar')
 }
